--- a/Fundamentos/bloco-03-introducao-a-html-e-css/dia-04-html-semantico/Exercicio-02/style.css
+++ b/Fundamentos/bloco-03-introducao-a-html-e-css/dia-04-html-semantico/Exercicio-02/style.css
@@ -7,6 +7,10 @@ body {
   background-color: antiquewhite;
 }
 
+h2 {
+  font-size: 25px;
+}
+
 #cabecalho {
   text-align: center;
   background-color: burlywood;
@@ -21,6 +25,11 @@ body {
   padding: 10px;
 }
 
+#menu a {
+  text-decoration: none;
+  color: azure;
+}
+
 #menu ul li {
   display: inline;
   list-style: none;
@@ -33,4 +42,128 @@ main {
   text-align: center;
   margin: auto;
   background-color: white;
+}
+
+#fatos ul li{
+  list-style-type: none;
+  text-align: left;
+  margin-left: 100px;
+  margin-bottom: 20px;
+  font-size: 20px;
+}
+
+#fatos h2 {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+#fatos {
+  margin-bottom: 100px;
+}
+
+#sobre {
+  margin-bottom: 100px;
+}
+
+#sobre h2 {
+  margin-bottom: 30px;
+}
+
+#sobre p {
+  margin-bottom: 50px;
+  text-align: justify;
+  font-size: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+#sobre table {
+  margin: auto;
+  text-align: center;
+  border: 2px solid black;
+}
+
+#sobre table th, td {
+  padding-bottom: 15px;
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+#fato1 {
+  margin-bottom: 100px;
+  font-size: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+#fato1 img {
+  margin-top: 40px;
+  max-width: 450px;
+}
+
+#fato1 p {
+  text-align: justify;
+}
+
+#fato2 {
+  margin-bottom: 100px;
+  font-size: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+#fato2 img {
+  margin-top: 40px;
+  max-width: 450px;
+}
+
+#fato2 p {
+  text-align: justify;
+}
+
+#fato3 {
+  margin-bottom: 100px;
+  font-size: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+#fato3 img {
+  margin-top: 40px;
+  max-width: 450px;
+}
+
+#fato3 p {
+  text-align: justify;
+}
+
+#conteudo-extra {
+  margin-bottom: 100px;
+}
+
+#conteudo-extra h2 {
+  margin-bottom: 30px;
+}
+
+#conteudo-extra a {
+  font-size: 20px;
+}
+
+#referencias {
+  margin-bottom: 100px;
+}
+
+#referencias h2 {
+  margin-bottom: 30px;
+}
+
+#referencias a {
+  font-size: 20px;
+  display: block;
+  margin-bottom: 40px;
+}
+
+#rodape {
+  font-size: 20px;
+  padding-bottom: 50px;
 }
