--- a/Fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-05-css-responsivo-mobile-first/exercicio1/exercise1.css
+++ b/Fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-05-css-responsivo-mobile-first/exercicio1/exercise1.css
@@ -3,22 +3,21 @@ body {
   margin: 10px;
 }
 h1 {
-  font-size: 25px
+  font-size: 25px;
 }
 h2 {
-
 }
 
 img {
-    max-width: 100%;
-    margin: 20px 0;
+  max-width: 100%;
+  margin: 20px 0;
 }
 
 figure {
-    margin: 0;
+  margin: 0;
 }
 
-@media screen and (min-width: 800px ) {
+@media screen and (min-width: 800px) {
   body {
     background-color: peachpuff;
     font-size: 25px;
